--- a/src/scss/themes/ng/body.scss
+++ b/src/scss/themes/ng/body.scss
@@ -296,6 +296,11 @@ li > div {
 			flex: 1 1 auto;
 			min-height: 0;
 			overflow: auto;
+			
+			// left align direct child buttons
+			> .cui-button {
+				align-self: flex-start;
+			}
 		}
 	}
 
@@ -1355,6 +1360,7 @@ li > div {
 
 a[role="button"].cui-button-appearance-link {
 	height: initial;
+	
 	> .cui-button-center {
 		word-wrap: break-word;
 	}
@@ -1362,7 +1368,6 @@ a[role="button"].cui-button-appearance-link {
 
 .cui-button-appearance-link[role] {
 	display: inline-flex;
-	width: auto !important;
 
 	&,
 	&:active {
